--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "Yu-Ming Chang",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
+    "mongo-store": "^0.0.2"
   }
 }
